[tool.poetry]
name = "bottelegram"
version = "0.1.0"
description = ""
authors = ["Aleksandr Sundeev <navigator97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytelegrambotapi = "^4.15.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
